<resources>
    <string name="app_name">深免施解封</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="remember_password">记住账号-密码</string>
    <string name="exit">退出</string>
    <string name="main_menu">主菜单</string>
    <string name="clearance">通关施封</string>
    <string name="store_in_storage">门店入库解封</string>
    <string name="ware_in_storage">仓库入库解封</string>
    <string name="ware_out_storage">仓库出库施封</string>
    <string name="scan_search">扫码查询</string>
    <string name="search">查询</string>
    <string name="history_record">历史记录</string>
    <string name="settings">设置</string>
    <string name="notice">提示</string>
    <string name="exit_app_hit_content">确认退出App吗？</string>
    <string name="cancel">取消</string>
    <string name="scan_code_tips">请使用PDA对准条形码进行码值识读</string>
    <string name="clean">清空</string>
    <string name="completed">完成</string>
    <string name="login">登陆</string>
    <string name="user_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="login_user_account_error_empty">请输入账号!</string>
    <string name="login_user_account_error_regex">账号为3-10位数字或字母构成</string>
    <string name="login_user_password_error_empty">请输入密码!</string>
    <string name="login_user_password_error_regex">账号为3-14位数字或字母构成</string>
    <string name="ok">确定</string>
    <string name="exit_app_tips">确定退出APP吗?</string>
    <string name="upload">上传</string>
    <string name="sm_group">深圳免税集团</string>
    <string name="feng_code">封条编码:</string>
    <string name="clearance_user">施封人:</string>
    <string name="clearance_addr">*施封地点:</string>
    <string name="clearance_addr1">施封地点:</string>
    <string name="clearance_time">施封时间:</string>
    <string name="out_addr">解封地点:</string>
    <string name="out_time">解封时间:</string>
    <string name="out_user">解封人:</string>
    <string name="car_number">*车牌号:</string>
    <string name="car_number1">车牌号:</string>
    <string name="remark">备注:</string>
    <string name="signature">签名:</string>
    <string name="confim_upload_clearance_dialog_tips">确认上传施封信息吗?</string>
    <string name="confim_upload_unlock_dialog_tips">确认上传解封信息吗?</string>
    <string name="upload_data_info_suc">上传信息成功</string>
    <string name="upload_data_info_fail">上传信息失败! 服务器无响应!</string>
    <string name="upload_data_info_fail_msg">上传信息失败! 服务器错误,原因:</string>
    <string name="upload_data_info_fail_net_msg">上传信息失败! 网络连接失败!</string>
    <string name="upload_data_save_local_tips">本地保存成功!您可以到"历史记录"中再次上传.</string>
    <string name="upload_data_save_local">本地保存</string>
    <string name="signature_tips">请在屏幕上手写签名</string>
    <string name="signature_save_error">签名保存失败,请检查APP权限设置.</string>
    <string name="upload_clearance_server_error_tips1">该条码已施封--异常!编码：%1$d</string>
    <string name="upload_clearance_server_nofound_tips2">系统找不到该条码!编码：%1$d</string>
    <string name="copy_number">复制编码</string>
    <string name="show_signature">查看签名</string>
    <string name="untie_user">解封人:</string>
    <string name="untie_address">*解封地点:</string>
    <string name="input_code_number_hit">请输入条码编号</string>
    <string name="user_name">用户名称:</string>
    <string name="user_account">用户账号:</string>
    <string name="user_group">所属组织:</string>
    <string name="update_password">修改密码</string>
    <string name="seal_no_found_info">封条信息不存在</string>
    <string name="seal_no_has_locked">封条未施封</string>
    <string name="seal_has_locked">封条已施封</string>
    <string name="seal_has_un_block">封条已解封</string>
    <string name="seal_empty">封条编码为空!</string>
    <string name="key_upload">一键上传</string>
    <string name="tgsflsjl">通关施封历史记录</string>
    <string name="ckjflsjl">仓库入库解封历史记录</string>
    <string name="ckcksflsjl">仓库出库施封历史记录</string>
    <string name="mdjflsjl">门店入库解封历史记录</string>
    <string name="username">用户名称:</string>
    <string name="offline_login">离线登录</string>
    <string name="net_fail_login_fail_msg">网络连接失败!</string>
    <string name="local_save_data">离线保存</string>
</resources>
