<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/constraint_toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/layout_line_bg">

        <ImageView
            android:id="@+id/sm_logo"
            android:layout_width="45dip"
            android:layout_height="41dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="45dip"
            android:layout_marginTop="4dp"
            android:background="@mipmap/smlogo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sm_group"
            android:textStyle="bold"
            android:textSize="@dimen/dp_25"
            android:textColor="@android:color/black"
            android:layout_toRightOf="@+id/sm_logo"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="5dip"
            android:layout_alignParentTop="true"
            />
        <TextView
            android:id="@+id/code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sm_logo"
            android:layout_marginLeft="45dip"
            android:layout_marginTop="5dip"
            android:text="@string/feng_code"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_18"
            />
        <TextView
            android:id="@+id/feng_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sm_logo"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="5dip"
            android:text=""
            android:layout_toRightOf="@+id/code_tv"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_18"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/layout_line_bg">
        <TextView
            android:id="@+id/ware_out_storage_user"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_width="95dip"
            android:layout_height="wrap_content"
            style="@style/InfoStyle"
            android:text="@string/clearance_user"
            android:layout_margin="5dip"
            />
        <TextView
            android:id="@+id/ware_out_storage_user_tv"
            android:layout_width="175dip"
            android:layout_height="wrap_content"
            style="@style/InfoStyle"
            android:text=""
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ware_out_storage_user"
            android:gravity="center_vertical|left"
            android:layout_margin="5dip"
            />
        <TextView
            android:id="@+id/ware_out_storage_addr"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ware_out_storage_user"
            android:layout_width="95dip"
            android:layout_height="wrap_content"
            style="@style/InfoStyle"
            android:text="@string/clearance_addr"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dp"
            />

        <Spinner
            android:id="@+id/ware_out_storage_addr_spinner"
            android:layout_width="175dip"
            android:layout_height="25dip"
            android:layout_below="@+id/ware_out_storage_user_tv"
            android:layout_margin="5dip"
            android:layout_toRightOf="@+id/ware_out_storage_addr"
            android:entries="@array/addr_array"
            android:text="addr" />

        <TextView
            android:id="@+id/car_number"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ware_out_storage_addr"
            android:layout_width="95dip"
            android:layout_height="wrap_content"
            style="@style/InfoStyle"
            android:text="@string/car_number"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/car_number_ed"
            android:layout_width="175dip"
            android:layout_height="35dip"
            android:layout_below="@+id/ware_out_storage_addr"
            android:layout_margin="5dip"
            android:layout_toRightOf="@+id/car_number"
            android:textSize="@dimen/dp_14"
            tools:text="123456" />
        <TextView
            android:id="@+id/remark"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/car_number"
            android:layout_width="95dip"
            android:layout_height="wrap_content"
            style="@style/InfoStyle"
            android:text="@string/remark"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/remark_ed"
            android:layout_width="175dip"
            android:layout_height="35dip"
            android:layout_below="@+id/car_number_ed"
            android:layout_margin="5dip"
            android:layout_toRightOf="@+id/remark"
            android:text="123456"
            android:textSize="@dimen/dp_14" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="vertical"
        android:background="@drawable/layout_line_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signature"
            style="@style/InfoStyle"
            android:layout_margin="5dip"
            />
        <LinearLayout
            android:id="@+id/signature_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dip">
            <GridLayout
                android:id="@+id/sig_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="3"
                android:layout_margin="5dip"
                android:visibility="gone"
                />
            <ImageView
                android:id="@+id/sig_add_btn"
                android:layout_width="35dip"
                android:layout_height="35dip"
                android:background="@mipmap/add"
                android:layout_margin="5dip"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>