<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_view"
        layout="@layout/constraint_toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_line_bg"
        android:layout_margin="@dimen/dp_10">
        <TextView
            android:id="@+id/user_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_width="95dip"
            android:layout_height="wrap_content"
            style="@style/InfoStyle"
            android:text="@string/user_name"
            android:layout_margin="5dip"
            />
        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="175dip"
            android:layout_height="wrap_content"
            style="@style/InfoStyle"
            android:text=""
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/user_name"
            android:gravity="center_vertical|left"
            android:layout_margin="5dip"
            />
        <TextView
            android:id="@+id/user_account"
            android:layout_alignParentLeft="true"
            android:layout_width="95dip"
            android:layout_height="wrap_content"
            style="@style/InfoStyle"
            android:layout_below="@+id/user_name"
            android:text="@string/user_account"
            android:layout_margin="5dip"
            />
        <TextView
            android:id="@+id/user_account_tv"
            android:layout_width="175dip"
            android:layout_height="wrap_content"
            style="@style/InfoStyle"
            android:text=""
            android:layout_below="@+id/user_name_tv"
            android:layout_toRightOf="@+id/user_account"
            android:gravity="center_vertical|left"
            android:layout_margin="5dip"
            />
        <TextView
            android:id="@+id/user_group"
            android:layout_alignParentLeft="true"
            android:layout_width="95dip"
            android:layout_height="wrap_content"
            style="@style/InfoStyle"
            android:layout_below="@+id/user_account"
            android:text="@string/user_group"
            android:layout_margin="5dip"
            />
        <TextView
            android:id="@+id/user_group_tv"
            android:layout_width="175dip"
            android:layout_height="wrap_content"
            style="@style/InfoStyle"
            android:text=""
            android:layout_below="@+id/user_name_tv"
            android:layout_toRightOf="@+id/user_account_tv"
            android:gravity="center_vertical|left"
            android:layout_margin="5dip"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/update_password_view"
        android:layout_width="match_parent"
        android:layout_height="35dip"
        android:background="@drawable/layout_line_bg"
        android:layout_margin="@dimen/dp_10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_password"
                style="@style/InfoStyle"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dip"
                android:layout_alignParentLeft="true"
                />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/menu_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            />
    </RelativeLayout>

</LinearLayout>