<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <include
        android:id="@+id/toolbar_view"
        layout="@layout/constraint_toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/search_view"
        android:layout_width="205dip"
        android:layout_height="wrap_content"
        android:hint="@string/input_code_number_hit"
        android:layout_below="@+id/toolbar_view"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="30dip"
        android:layout_alignParentLeft="true"
        android:textSize="@dimen/dp_16"
        />
    <RelativeLayout
        android:id="@+id/search_btn"
        android:layout_width="@dimen/dp_65"
        android:layout_height="@dimen/dp_30"
        android:layout_below="@+id/toolbar_view"
        android:layout_marginTop="10dip"
        android:background="@drawable/shape_search_btn"
        android:layout_toRightOf="@+id/search_view">
            <ImageView
                android:id="@+id/search_img"
                android:layout_width="12dip"
                android:layout_height="12dip"
                android:background="@mipmap/search"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/dp_5"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_13"
                android:layout_toRightOf="@+id/search_img"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dip"
                />
    </RelativeLayout>

    <ImageView
        android:id="@+id/scan_image"
        android:layout_width="250dip"
        android:layout_height="150dip"
        android:layout_centerInParent="true"
        android:background="@mipmap/scan"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scan_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dip"
        android:text="@string/scan_code_tips"
        android:textColor="@color/title_bg_color"
        android:textSize="13sp"
        android:textStyle="bold" />
</RelativeLayout>