<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dialog_bg_color">

        <RelativeLayout
            android:id="@+id/dialog_tile_view"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:background="@color/title_bg_color">
                <TextView
                    android:id="@+id/dialog_tile_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TitleFontStyle"
                    android:text="@string/notice"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_alignParentLeft="true"
                    />

                <ImageView
                    android:id="@+id/dialog_title_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_centerVertical="true"
                    android:background="@android:drawable/ic_menu_close_clear_cancel" />
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95dip"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_content_msg"
            style="@style/ContentFontStyle"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:gravity="center_vertical|left"
            android:text="@string/history_record" />

        <ImageView
            android:id="@+id/dialog_content_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="25dip"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="25dip"
            android:layout_toLeftOf="@+id/dialog_content_msg"
            android:background="?attr/actionModeCloseDrawable" />

    </RelativeLayout>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="1dip"
           android:background="@color/menu_color"
           android:layout_marginLeft="10dip"
           android:layout_marginRight="10dip"
           />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="55dip"
           android:orientation="horizontal"
           android:layout_margin="10dip"
           android:gravity="center">
                <Button
                    android:id="@+id/dialog_left_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dip"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:background="@drawable/shape_left_btn"
                    style="@style/LeftBtnFontStyle"
                    android:text="@string/ok"
                    />
               <Button
                   android:id="@+id/dialog_right_btn"
                   android:layout_width="wrap_content"
                   android:layout_height="35dip"
                   android:background="@drawable/shape_right_btn"
                   android:layout_marginLeft="35dip"
                   android:paddingLeft="10dip"
                   android:paddingRight="10dip"
                   style="@style/RightBtnFontStyle"
                   android:text="@string/cancel"
                   />
       </LinearLayout>

</LinearLayout>